@@ -1,4 +1,4 @@
-BEGIN { $| = 1; print "1..5\n"; }
+BEGIN { $| = 1; print "1..39\n"; }
 END {print "not ok 1\n" unless $loaded;}
 use Imager;
 
@@ -46,6 +46,61 @@ if ($diff > 0) {
   $nimg->write(file=>"testout/t64copyflip_error.ppm") or die $nimg->errstr();
 }
 else { print "ok 5\n"; }
+
+rot_test(6, $img, 90, 4);
+rot_test(10, $img, 180, 2);
+rot_test(14, $img, 270, 4);
+rot_test(18, $img, 0, 1);
+
+my $pimg = $img->to_paletted();
+rot_test(22, $pimg, 90, 4);
+rot_test(26, $pimg, 180, 2);
+rot_test(30, $pimg, 270, 4);
+rot_test(34, $pimg, 0, 1);
+
+my $timg = $img->rotate(right=>90)->rotate(right=>270);
+Imager::i_img_diff($img->{IMG}, $timg->{IMG}) and print "not ";
+print "ok 38\n";
+$timg = $img->rotate(right=>90)->rotate(right=>180)->rotate(right=>90);
+Imager::i_img_diff($img->{IMG}, $timg->{IMG}) and print "not ";
+print "ok 39\n";
+
+sub rot_test {
+  my ($testnum, $src, $degrees, $count) = @_;
+
+  my $cimg = $src->copy();
+  my $in;
+  for (1..$count) {
+    $in = $cimg;
+    $cimg = $cimg->rotate(right=>$degrees)
+      or last;
+  }
+  if ($cimg) {
+    print "ok ",$testnum++,"\n";
+    my $diff = Imager::i_img_diff($src->{IMG}, $cimg->{IMG});
+    if ($diff) {
+      print "not ok ",$testnum++," # final image doesn't match input\n";
+      for (1..3) {
+        print "ok ",$testnum++," # skipped\n";
+      }
+    }
+    else {
+      # check that other parameters match
+      $src->type eq $cimg->type or print "not ";
+      print "ok ",$testnum++," # type\n";
+      $src->bits eq $cimg->bits or print "not ";
+      print "ok ",$testnum++," # bits\n";
+      $src->getchannels eq $cimg->getchannels or print "not ";
+      print "ok ",$testnum++," # channels \n";
+    }
+  }
+  else {
+    print "not ok ",$testnum++," # rotate returned undef:",$in->errstr,"\n";
+    for (1..4) {
+      print "ok ",$testnum++," # skipped\n";
+    }
+  }
+}
 
 sub skip {
     print $_[0];
