@@ -438,6 +438,8 @@ Revision history for Perl extension Imager.
         - OO interface read_multi() to read multi-image files (just GIF
           so far)
         - documentation for the multi-image GIF reading and tags
+        - rotate() method with rotate by steps of 90 degrees (and docs)
+        - fixed a bug in i_img_pal_new_low()
 
 =================================================================
 
